--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -44,12 +44,12 @@ sky:
     admin-token-name: token
     user-secret-key: itheima
     user-ttl: 7200000
-    user-token-name: authentication
-  alioss:
-    endpoint: ${sky.alioss.endpoint}
-    access-key-id: ${sky.alioss.access-key-id}
-    access-key-secret: ${sky.alioss.access-key-secret}
-    bucket-name: ${sky.alioss.bucket-name}
+#    user-token-name: authentication
+#  alioss:
+#    endpoint: ${sky.alioss.endpoint}
+#    access-key-id: ${sky.alioss.access-key-id}
+#    access-key-secret: ${sky.alioss.access-key-secret}
+#    bucket-name: ${sky.alioss.bucket-name}
   wechat:
     appid: ${sky.wechat.appid}
     secret: ${sky.wechat.secret}
